# poke-hub

./: .env.docker.example  .env.docker.production.example  .env.local.example  .env.vagrant.example  .gitignore  .pre-commit-config.yaml  README.md  app.log.1  app.log.2  app.log.3  app.log.4  app.log.5  app.log.6  app.log.7  fakenodo_db.json  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: planned_work.md  unplanned_work.md
.github/workflows/: CD_render.yml  CD_render_trunk_1.yml  CD_render_trunk_2.yml  CI_codacy.yml  CI_commits.yml  CI_lint.yml  CI_pytest.yml
app/: __init__.py  extensions.py
app/templates/: 400.html  401.html  404.html  500.html  base_template.html
core/configuration/: configuration.py
core/managers/: config_manager.py
docs/: Conclusion-y-trabajo-futuro.md  Descripcion-del-Sistema.md  Diario-del-Equipo.md  Documento-del-proyecto.md  Ejercicio-de-cambio.md  Modelo-de-portada-(poke-hub-2).md  Modelo-de-portada.md  resumen_ejecutivo.md
docs/pokehub1/: Documento-del-proyecto.md  Modelo-de-portada-poke-hub-1.md
docs/pokehub2/: Diario-del-Equipo.md  Documento-del-proyecto.md  Modelo-de-portada.md
fakenodo_service/: app.py  fakenodo_db.json  test_fakenodo_app.py
migrations/versions/: 001.py  187668a75f9a_migracion_del_merge_eca72.py  1e2ca7723141_eliminacion_modulo_featuremodel.py  1e504dbafc04_add_usersession_table.py  2a380f125154_add_2fa_fields_to_user_model.py  2de65b1f1aeb_creacion_modulo_elasticsearch.py  4f95d34d29f7_cambiado_publicationtype_del_dataset.py  (+12 more)
vagrant/: 04_install_dependencies.yml  vagrantSetup.md
(+145 files in other folders)
